@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2002-05-31 09:56:09 dressel Exp $
+$Id: History,v 1.10 2002-07-10 14:52:42 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+July, 10th, 2002 M.Dressel - internal-1-geombias-V04-01-01
+ change in G4Sigma: the sum over the weights is returned by GetWsum 
+ (before it was GetSumOfWeights) and the weighted sum over x is returned  
+ by GetWXsum().
+
 
 May, 31th, 2002  M.Dressel - geombias-V04-00-04
 - change name ImportanceSampler to ImportanceSplitExaminer
